@@ -1,3 +1,6 @@
+** (2012-04-22) Sven Vermeulen <sven.vermeulen@siphos.be>
+	- Update on JBoss
+
 ** (2012-04-21) Sven Vermeulen <sven.vermeulen@siphos.be>
 	- Start on NFSv4
 
